[gd_scene load_steps=7 format=3 uid="uid://blrab8cgr1tjq"]

[ext_resource type="Script" uid="uid://dsqc2ka2ku53p" path="res://scripts/TitleScreen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dj8vyaw0yyaaa" path="res://material/logo.png" id="2"]
[ext_resource type="Texture2D" path="res://material/startGame.png" id="3"]

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fade_out"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"fade_in": SubResource("Animation_fade_in"),
&"fade_out": SubResource("Animation_fade_out")
}

[node name="TitleScreen" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.15, 0.25, 1)

[node name="LogoContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 750.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="LogoTexture" type="TextureRect" parent="LogoContainer"]
layout_mode = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
texture_normal = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1")
}
